# 2024-2A-T02-EC11-G01

./: .env.develop.tmpl  .gitignore  Justfile  README.md  docker-compose.yml
.github/workflows/: deploy-docusaurus.yaml  deploy.yml
backend/: go.mod  go.sum
backend/api/: docs.go  swagger.json  swagger.yaml
backend/cmd/app/: main.go  wire.go  wire_gen.go
backend/cmd/dapp/: Cargo.toml
backend/cmd/prover/: main.go
backend/cmd/prover/lib/: Cargo.toml
backend/cmd/prover/lib/src/: lib.rs
backend/configs/: blockchain.go  env.go  postgres.go  rabbitmq.go
computer-vision/yolo/: test_model.py
docs/: README.md  docusaurus.config.ts
docs/docs/: intro.md
docs/docs/sprint-1/: Presentation1.md  _category_.json
docs/docs/sprint-2/: Presentation1.md  _category_.json  camera.md  modelos-ia.md  pestel-analysis.md
docs/docs/sprint-3/: Presentation3.md  _category_.json  implementation-conditions.md  risk-matrix.md
docs/docs/sprint-4/: Finantial-analisys.md  Presentation4.md  Tests.md  _category_.json
docs/docs/sprint-5/: _category_.json  (+2 more)
embedded/: .env.example  Cargo.toml  README.md
embedded/src/: main.rs  ultrasonic_runner.ino
embedded/src/features/aws/: mod.rs  s3_upload.rs
infraestructure/database/: Dockerfile  package.json  pnpm-lock.yaml
infraestructure/prometheus/: prometheus.yml
infraestructure/rabbitmq/: Dockerfile  definitions.json
predictor/: .gitignore  Dockerfile  requirements.txt
predictor/src/: main.py
streamlit/: main.py  requirements.txt
streamlit/components/: dashboard.py  metrics.py  sidebar.py
streamlit/style/: style.css
(+39 files in other folders)
